# uap-python

./: .gitignore  .gitmodules  MANIFEST.in  README.rst  pyproject.toml  setup.py  tox.ini
src/: main.cpp
src/ua_parser/: __init__.py  user_agent_parser.py
